// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Component should apply values from theme 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  replaceTheme={[Function]}
  testID="Internal__Overlay"
  transparent={true}
  updateTheme={[Function]}
  visible={true}
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, .4)",
        "height": "100%",
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    testID="RNE__Overlay__backdrop"
  />
  <View
    pointerEvents="box-none"
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 3,
          "padding": 20,
          "shadowColor": "rgba(0, 0, 0, .3)",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowRadius": 4,
          "width": "75%",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      />
    </View>
  </View>
</Modal>
`;

exports[`Dialog Component should render with title 1`] = `
<Themed.Overlay
  isVisible={true}
  overlayStyle={
    Object {
      "padding": 20,
      "width": "75%",
    }
  }
  testID="Internal__Overlay"
>
  <View
    style={
      Object {
        "marginBottom": 5,
      }
    }
  >
    <Component
      title="Dialog Title"
    />
    <Text>
      This is a test dialog
    </Text>
  </View>
</Themed.Overlay>
`;

exports[`Dialog Component should render without any children 1`] = `
<Themed.Overlay
  isVisible={true}
  overlayStyle={
    Object {
      "padding": 20,
      "width": "75%",
    }
  }
  testID="Internal__Overlay"
>
  <View
    style={
      Object {
        "marginBottom": 5,
      }
    }
  />
</Themed.Overlay>
`;

exports[`Dialog Component should render without buttons 1`] = `
<Themed.Overlay
  isVisible={true}
  overlayStyle={
    Object {
      "padding": 20,
      "width": "75%",
    }
  }
  testID="Internal__Overlay"
>
  <View
    style={
      Object {
        "marginBottom": 5,
      }
    }
  >
    <Text>
      This is a test dialog
    </Text>
    <Component>
      <Component />
    </Component>
  </View>
</Themed.Overlay>
`;
